<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_button"
            android:textSize="34sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingVertical="25dp"
            />

        <EditText
            android:id="@+id/etNik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nik_form"
            android:inputType="number" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_form"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etNoHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_form"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_form"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbLaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guy_gender_form" />
            <RadioButton
                android:id="@+id/rbPerempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/girl_gender_form" />
        </RadioGroup>

        <EditText
            android:id="@+id/etTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_form"
            android:focusable="false"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAlamat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/location_form"
                android:focusable="false"/>

            <Button
                android:id="@+id/btnCekLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_button_form" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_form"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/ivGambar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="#E0E0E0"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_button"
            android:backgroundTint="#4A90E2"
            android:textColor="#FFFFFF" />

    </LinearLayout>



</ScrollView>